--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     <img src="logo-azul-cargo.png" alt="Logo Azul Cargo Express" class="logo">
     <h1>Central de Materiais de Marketing<br>Azul Cargo Express</h1>
     <div class="container">
-        <a href="https://voeazul-my.sharepoint.com/my?csf=1&web=1&e=n4y4Qp&CID=f4b58658-0db8-4f72-a0bf-4541ec3c2af4&id=%2Fpersonal%2Fadv_lucas_voeazul_com_br%2FDocuments%2FMarketing%20-%20Azul%20Cargo%2FLogo%20-%20Azul%20Cargo&FolderCTID=0x012000DC244BAA681F1940BAA8F2DB5740EB32" class="box" target="_blank">Logo — Azul Cargo</a>
-        <a href="https://voeazul-my.sharepoint.com/:f:/r/personal/adv_lucas_voeazul_com_br/Documents/Marketing%20-%20Azul%20Cargo/Fotos%20para%20utiliza%C3%A7%C3%A3o?csf=1&web=1&e=Xyeqnv" class="box" target="_blank">Fotos para utilização</a>
-        <a href="https://voeazul-my.sharepoint.com/:f:/r/personal/adv_lucas_voeazul_com_br/Documents/Marketing%20-%20Azul%20Cargo/Enxoval%20de%20loja?csf=1&web=1&e=xIUXPc" class="box" target="_blank">Enxoval de loja</a>
-        <a href="https://voeazul-my.sharepoint.com/:f:/r/personal/adv_lucas_voeazul_com_br/Documents/Marketing%20-%20Azul%20Cargo/Redes%20Sociais?csf=1&web=1&e=zScITO" class="box" target="_blank">Redes sociais</a>
+        <a href="https://voeazul-my.sharepoint.com/:f:/g/personal/adv_lucas_voeazul_com_br/EiPuWzccEs5AqpSK0IILk0oBBjEkG4RYQFL-DC9N3B9tmQ?e=g1Q3JU" class="box" target="_blank">Logo — Azul Cargo</a>
+        <a href="https://voeazul-my.sharepoint.com/:f:/g/personal/adv_lucas_voeazul_com_br/El2FfedLDKpBlu4LjgKmMLgBCrs5eAUYR606-aYFtJB3GA?e=pZXUH7" class="box" target="_blank">Fotos para utilização</a>
+        <a href="https://voeazul-my.sharepoint.com/:f:/g/personal/adv_lucas_voeazul_com_br/Ek1t2dUFf_tKh3vMEReH8zcBJDgC03evLI7q5QdC3JsWhg?e=H6rCov" class="box" target="_blank">Enxoval de loja</a>
+        <a href="https://voeazul-my.sharepoint.com/:f:/g/personal/adv_lucas_voeazul_com_br/EtVb1leNMn5NmydPTJC7PnoBC70eUzZa5KHee7-3aGnQaQ?e=2mJI1s" class="box" target="_blank">Redes sociais</a>
     </div>
     <footer>
         Material exclusivo para representantes Azul Cargo Express.
