--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
     <img src="logo-azul-cargo.png" alt="Logo Azul Cargo Express" class="logo">
     <h1>Central de Materiais de Marketing<br>Azul Cargo Express</h1>
     <div class="container">
-        <a href="https://voeazul-my.sharepoint.com/:f:/g/personal/adv_lucas_voeazul_com_br/EiPuWzccEs5AqpSK0IILk0oBBjEkG4RYQFL-DC9N3B9tmQ?e=g1Q3JU" class="box" target="_blank">Logo — Azul Cargo</a>
-        <a href="https://voeazul-my.sharepoint.com/:f:/g/personal/adv_lucas_voeazul_com_br/El2FfedLDKpBlu4LjgKmMLgBCrs5eAUYR606-aYFtJB3GA?e=pZXUH7" class="box" target="_blank">Fotos para utilização</a>
-        <a href="https://voeazul-my.sharepoint.com/:f:/g/personal/adv_lucas_voeazul_com_br/Ek1t2dUFf_tKh3vMEReH8zcBJDgC03evLI7q5QdC3JsWhg?e=H6rCov" class="box" target="_blank">Enxoval de loja</a>
-        <a href="https://voeazul-my.sharepoint.com/:f:/g/personal/adv_lucas_voeazul_com_br/EtVb1leNMn5NmydPTJC7PnoBC70eUzZa5KHee7-3aGnQaQ?e=2mJI1s" class="box" target="_blank">Redes sociais</a>
-        <a href="https://voeazul-my.sharepoint.com/:p:/r/personal/adv_lucas_voeazul_com_br/Documents/Marketing%20-%20Azul%20Cargo/Apresenta%C3%A7%C3%A3o%20Institucional%20(1).pptx?d=w9463722fb2eb4224953ba9f458ac9e0b&csf=1&web=1&e=6L4SoG" class="box" target="_blank">Apresentação Institucional</a>
+        <a href="https://voeazul-my.sharepoint.com/:f:/r/personal/fabio_santiago_voeazul_com_br/Documents/Marketing%20-%20Azul%20Cargo/Logo%20-%20Azul%20Cargo?csf=1&web=1&e=tp5sOT" class="box" target="_blank">Logo — Azul Cargo</a>
+        <a href="https://voeazul-my.sharepoint.com/:f:/r/personal/fabio_santiago_voeazul_com_br/Documents/Marketing%20-%20Azul%20Cargo/Fotos%20para%20utiliza%C3%A7%C3%A3o?csf=1&web=1&e=mT4cCs" class="box" target="_blank">Fotos para utilização</a>
+        <a href="https://voeazul-my.sharepoint.com/:f:/r/personal/fabio_santiago_voeazul_com_br/Documents/Marketing%20-%20Azul%20Cargo/Enxoval%20de%20loja?csf=1&web=1&e=dxUPzL" class="box" target="_blank">Enxoval de loja</a>
+        <a href="https://voeazul-my.sharepoint.com/:f:/r/personal/fabio_santiago_voeazul_com_br/Documents/Marketing%20-%20Azul%20Cargo/Redes%20Sociais?csf=1&web=1&e=GJGCor" class="box" target="_blank">Redes sociais</a>
+        <a href="https://voeazul-my.sharepoint.com/:p:/r/personal/fabio_santiago_voeazul_com_br/Documents/Marketing%20-%20Azul%20Cargo/Apresenta%C3%A7%C3%A3o%20Institucional%20(1).pptx?d=w87fe5c0558864681ae3ab26d7905176e&csf=1&web=1&e=wQGbFG" class="box" target="_blank">Apresentação Institucional</a>
         <a href="https://forms.office.com/r/ypWYK2NigV" class="box" target="_blank">Solicite ao Marketing AQUI!</a>
     </div>
     <footer>
@@ -63,3 +63,4 @@
     </footer>
 </body>
 </html>
+
